Fix the overflow-x

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,6 +5,7 @@ body
 {
     background-color: #f8d4c4;
     margin: 0;
+    overflow-x: hidden;
 }
 
 /* header */
@@ -80,6 +81,7 @@ header
     background-color: white;
     width: 10rem;
 }
+
 
 .AboutUs-Content-Container 
 {
